--- a/frontend/manage_job_offers.html
+++ b/frontend/manage_job_offers.html
@@ -174,15 +174,60 @@
         }
     }
 
+    function formatErrorPayload(payload) {
+        if (!payload) return 'Request failed';
+        if (typeof payload === 'string') {
+            const trimmed = payload.trim();
+            const looksLikeJson = (trimmed.startsWith('{') && trimmed.endsWith('}')) ||
+                (trimmed.startsWith('[') && trimmed.endsWith(']'));
+            if (looksLikeJson) {
+                try {
+                    return formatErrorPayload(JSON.parse(trimmed));
+                } catch (error) {
+                    try {
+                        const normalized = trimmed
+                            .replace(/([{,]\s*)'([^']+?)'\s*:/g, '$1"$2":')
+                            .replace(/:\s*'([^']+?)'\s*(?=[,}])/g, ':"$1"');
+                        return formatErrorPayload(JSON.parse(normalized));
+                    } catch (inner) {
+                        // ignore
+                    }
+                }
+            }
+
+            const pseudo = trimmed.match(/^\{\s*['"]?error['"]?\s*:\s*['"]?(.+?)['"]?\s*\}$/i);
+            if (pseudo) {
+                return pseudo[1];
+            }
+
+            return trimmed;
+        }
+        if (Array.isArray(payload)) return payload.join(', ');
+        if (typeof payload === 'object') {
+            return Object.entries(payload).map(([key, value]) => {
+                const label = key === 'non_field_errors' ? '' : `${key}: `;
+                if (Array.isArray(value)) {
+                    return `${label}${value.join(', ')}`;
+                }
+                if (value && typeof value === 'object') {
+                    return `${label}${JSON.stringify(value)}`;
+                }
+                return `${label}${value}`;
+            }).join('\n');
+        }
+        return 'Request failed';
+    }
+
     async function fetchJSON(url, options = {}) {
         const response = await fetch(url, options);
+        const isJson = response.headers.get('content-type')?.includes('application/json');
+        const payload = isJson ? await response.json() : await response.text();
+
         if (!response.ok) {
-            const text = await response.text();
-            throw new Error(text || 'Request failed');
+            throw new Error(formatErrorPayload(payload));
         }
-        return response.headers.get('content-type')?.includes('application/json')
-            ? response.json()
-            : response.text();
+
+        return payload;
     }
 
     function formToJSON(form) {
